{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 27,
  "lineage": "66077b4c-e735-c8ad-f9e5-0d2eddb17222",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0030e4319cbf4dbf2",
            "arn": "arn:aws:ec2:us-east-1:084738801947:instance/i-082a8f6b4c7e38fc3",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-082a8f6b4c7e38fc3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-00f5314d60d135851"
              }
            ],
            "primary_network_interface_id": "eni-00f5314d60d135851",
            "private_dns": "ip-10-0-2-148.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.148",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08c9e3ad17ef4127c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-023b0b1ea7a8fad4d",
            "tags": {
              "Name": "db-ec2",
              "Platform": "TF",
              "Team": "devops team"
            },
            "tags_all": {
              "Name": "db-ec2",
              "Platform": "TF",
              "Team": "devops team"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0afd6d1829b30a0d2"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "084738801947",
            "id": "i-082a8f6b4c7e38fc3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.test-sg",
            "aws_subnet.test-private",
            "aws_vpc.test-vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "test-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0030e4319cbf4dbf2",
            "arn": "arn:aws:ec2:us-east-1:084738801947:instance/i-0f34000b24a9bbdc2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f34000b24a9bbdc2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0f3e9aac57edfa5cf"
              }
            ],
            "primary_network_interface_id": "eni-0f3e9aac57edfa5cf",
            "private_dns": "ip-10-0-1-236.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.236",
            "public_ip": "98.86.117.56",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0af954495afcd3b1c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-068f6fac31f19ee61",
            "tags": {
              "Name": "test ec2",
              "Platform": "TF",
              "Team": "devops team"
            },
            "tags_all": {
              "Name": "test ec2",
              "Platform": "TF",
              "Team": "devops team"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0afd6d1829b30a0d2"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "084738801947",
            "id": "i-0f34000b24a9bbdc2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.test-sg",
            "aws_subnet.test-public",
            "aws_vpc.test-vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084738801947:internet-gateway/igw-03f3526393a9ad009",
            "id": "igw-03f3526393a9ad009",
            "owner_id": "084738801947",
            "region": "us-east-1",
            "tags": {
              "Name": "test-igw",
              "config_platform": "TF",
              "team": "devops team"
            },
            "tags_all": {
              "Name": "test-igw",
              "config_platform": "TF",
              "team": "devops team"
            },
            "vpc_id": "vpc-0b1e7ad8722231a24"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.test-vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "test-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084738801947:route-table/rtb-0bfd7960a0f89f026",
            "id": "rtb-0bfd7960a0f89f026",
            "owner_id": "084738801947",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03f3526393a9ad009",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-rt",
              "platform": "TF",
              "team": "devops team"
            },
            "tags_all": {
              "Name": "test-rt",
              "platform": "TF",
              "team": "devops team"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1e7ad8722231a24"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "084738801947",
            "id": "rtb-0bfd7960a0f89f026",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.test-igw",
            "aws_vpc.test-vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test-public-subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0919340d99aa514a6",
            "region": "us-east-1",
            "route_table_id": "rtb-0bfd7960a0f89f026",
            "subnet_id": "subnet-068f6fac31f19ee61"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.test-igw",
            "aws_route_table.test-rt",
            "aws_subnet.test-public",
            "aws_vpc.test-vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084738801947:security-group/sg-0afd6d1829b30a0d2",
            "description": "Allow SSH and HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0afd6d1829b30a0d2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "test-sg",
            "name_prefix": "",
            "owner_id": "084738801947",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-sg",
              "config_platform": "TF",
              "team": "devops team"
            },
            "tags_all": {
              "Name": "test-sg",
              "config_platform": "TF",
              "team": "devops team"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1e7ad8722231a24"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "084738801947",
            "id": "sg-0afd6d1829b30a0d2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.test-vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084738801947:subnet/subnet-023b0b1ea7a8fad4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-023b0b1ea7a8fad4d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "084738801947",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "test-private",
              "config_platform": "TF",
              "team": "devops team"
            },
            "tags_all": {
              "Name": "test-private",
              "config_platform": "TF",
              "team": "devops team"
            },
            "vpc_id": "vpc-0b1e7ad8722231a24"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "084738801947",
            "id": "subnet-023b0b1ea7a8fad4d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.test-vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084738801947:subnet/subnet-068f6fac31f19ee61",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-068f6fac31f19ee61",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "084738801947",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "test-public",
              "config_platform": "TF",
              "team": "devops team"
            },
            "tags_all": {
              "Name": "test-public",
              "config_platform": "TF",
              "team": "devops team"
            },
            "vpc_id": "vpc-0b1e7ad8722231a24"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "084738801947",
            "id": "subnet-068f6fac31f19ee61",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.test-vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test-vpc-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084738801947:vpc/vpc-0b1e7ad8722231a24",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-050d44ad70d0e80fb",
            "default_route_table_id": "rtb-0f2ea71c89aaae98f",
            "default_security_group_id": "sg-0247c895574669247",
            "dhcp_options_id": "dopt-02f696771a43577a2",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b1e7ad8722231a24",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f2ea71c89aaae98f",
            "owner_id": "084738801947",
            "region": "us-east-1",
            "tags": {
              "Name": "test-vpc-01",
              "config_platform": "TF",
              "team": "devops team"
            },
            "tags_all": {
              "Name": "test-vpc-01",
              "config_platform": "TF",
              "team": "devops team"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "084738801947",
            "id": "vpc-0b1e7ad8722231a24",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084738801947:security-group-rule/sgr-08fc8ec7a9759daf2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-08fc8ec7a9759daf2",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0afd6d1829b30a0d2",
            "security_group_rule_id": "sgr-08fc8ec7a9759daf2",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "084738801947",
            "id": "sgr-08fc8ec7a9759daf2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.test-sg",
            "aws_vpc.test-vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "inbound_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084738801947:security-group-rule/sgr-0323cd46409005de9",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0323cd46409005de9",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0afd6d1829b30a0d2",
            "security_group_rule_id": "sgr-0323cd46409005de9",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "084738801947",
            "id": "sgr-0323cd46409005de9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.test-sg",
            "aws_vpc.test-vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "inbound_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084738801947:security-group-rule/sgr-0a60d62860edcd1b0",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0a60d62860edcd1b0",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0afd6d1829b30a0d2",
            "security_group_rule_id": "sgr-0a60d62860edcd1b0",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "084738801947",
            "id": "sgr-0a60d62860edcd1b0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.test-sg",
            "aws_vpc.test-vpc-01"
          ]
        }
      ]
    }
  ]
}